--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
+        "picqer/php-barcode-generator": "^2.2",
         "wildside/userstamps": "^2.2"
     },
     "require-dev": {
